--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 .idea/modules.xml
 .idea/vcs.xml
 .idea/workspace.xml
+SEGUIN_LARVET_AndroidProject/.idea/gradle.xml
+SEGUIN_LARVET_AndroidProject/.idea/misc.xml
+SEGUIN_LARVET_AndroidProject/.idea/modules.xml
