[FIX] Cancelling while getting a new picture

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 SEGUIN_LARVET_AndroidProject/.idea/gradle.xml
 SEGUIN_LARVET_AndroidProject/.idea/misc.xml
 SEGUIN_LARVET_AndroidProject/.idea/modules.xml
+SEGUIN_LARVET_AndroidProject/.idea/vcs.xml
